--- a/public/views/layouts/main.handlebars
+++ b/public/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
     <link rel='manifest' href='./manifest.json'>
     <link rel='apple-touch-icon' href='./images/apple-touch.png'>
 
+    
     <script>
         // Register service worker
         if ('serviceWorker' in navigator) {
@@ -24,6 +25,9 @@
 <body>
 
     {{{body}}}
+
+    <script src="./scripts/tensorflow.js" type="text/javascript"></script>
+    <script src="./scripts/coco-ssd.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
