remove unused buttons

--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -1,15 +1,15 @@
 <h1 class="text-center">Camera PWA</h1>
 
 <div>
-    <div id="liveView">
-        <video id="webcam" autoplay width="640" height="480"></video>
+    <div id="liveVideo">
+        <video id="webcam" autoplay></video>
         <canvas></canvas>
     </div>
 
     <div class="video-controls">
-        <button title="Play">Play</button>
-        <button title="Pause">Pause</button>
-        <button title="Save">Save Image</button>
+        <button title="Play">Start facial recognition</button>
+        {{!-- <button title="Pause">Pause</button>
+        <button title="Save">Save Image</button> --}}
     </div>
 
 </div>
