add ability to pause video and partial ability to save image from current video frame

--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -6,10 +6,12 @@
         <canvas></canvas>
     </div>
 
+    <img class="save-image">
+
     <div class="video-controls">
         <button title="Play">Start facial recognition</button>
-        {{!-- <button title="Pause">Pause</button>
-        <button title="Save">Save Image</button> --}}
+        <button title="Pause">Pause</button>
+        <button title="Save">Save Image</button>
     </div>
 
 </div>
