--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -12,6 +12,7 @@
         <button title="Play">Start facial recognition</button>
         <button title="Pause">Pause</button>
         <button title="Save">Save Image</button>
+        <button title="Flashlight">Turn on Flashlight</button>
     </div>
 
 </div>
