--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -15,6 +15,6 @@
         <button title="Flashlight">Turn on Flashlight</button>
     </div>
 
-    <p id="error"></p>
+    <p id="errorMessage"></p>
 
 </div>
