--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,7 +5,7 @@
     position: absolute;
 }
 
-.liveVideo {
+#liveVideo {
     position: relative;
     float: left;
     width: calc(100% - 20px);
@@ -13,7 +13,7 @@
     cursor: pointer;
   }
   
-.liveVideo p {
+#liveVideo p {
 position: absolute;
 padding: 5px;
 background-color: rgba(255, 111, 0, 0.85);
