--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -7,8 +7,9 @@
 
     <img class="save-image">
 
+    <p id="information">Loading model. Please wait before starting camera.</p>
     <div class="video-controls">
-        <button title="Play">Start facial recognition</button>
+        <button title="Play">Start camera</button>
         <button title="Pause">Pause</button>
         <button title="Save">Save Image</button>
     </div>
