change video frame size

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,6 +5,11 @@
     position: absolute;
 }
 
+#webcam {
+    width: 80%;
+    height: auto;
+}
+
 #liveVideo {
     position: relative;
     float: left;
