--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -5,10 +5,10 @@
     position: absolute;
 }
 
-#webcam {
+/* #webcam {
     width: 80%;
     height: auto;
-}
+} */
 
 #liveVideo {
     position: relative;
