images are now properly stored to IndexedDB

--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -11,9 +11,13 @@
     <div class="video-controls">
         <button title="Play">Start camera</button>
         <button title="Pause">Pause</button>
-        <button title="Save">Save Image</button>
+        <button title="Save" id="save-image">Save Image</button>
     </div>
 
     <p id="errorMessage"></p>
 
 </div>
+
+<script src="./scripts/tensorflow.js" type="text/javascript"></script>
+<script src="./scripts/coco-ssd.js"></script>
+<script type="module" src="./scripts/camera.js"></script>
