--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -9,9 +9,10 @@
 
     <p id="information">Loading model. Please wait before starting camera.</p>
     <div class="video-controls">
-        <button title="Play">Start camera</button>
-        <button title="Pause">Pause</button>
-        <button title="Save" id="save-image">Save Image</button>
+        <button id="play" title="Play">Start camera</button>
+        <button id="pause" title="Pause">Pause</button>
+        <button id="save-image" title="Save">Save Image</button>
+        <button id="view" title="View">View Photos</button>
     </div>
 
     <p id="errorMessage"></p>
