--- a/public/views/home.handlebars
+++ b/public/views/home.handlebars
@@ -1,6 +1,10 @@
 <h1 class="text-center">Camera PWA</h1>
 
 <div>
+
+</div>
+    <button id="installApp">Install</button>
+<div>
     <div id="liveVideo">
         <video id="webcam" autoplay></video>
     </div>
